AP-23494: Move UNSAFE instance to UnsafeUtil
to be re-used for copying memory.

AP-23494 (Use heap instead of off-heap memory in columnar backend)